--- a/zensical.toml
+++ b/zensical.toml
@@ -3,8 +3,8 @@ site_name = "llamatelemetry Documentation"
 site_description = "Extensive documentation for llamatelemetry v0.1.0: inference, observability, Kaggle, GGUF, APIs, and notebooks."
 site_author = "llamatelemetry"
 site_url = "https://llamatelemetry.github.io/"
-repo_url = "https://github.com/llamatelemetry/llamatelemetry.github.io"
-repo_name = "llamatelemetry/llamatelemetry.github.io"
+repo_url = "https://github.com/llamatelemetry/llamatelemetry"
+repo_name = "llamatelemetry/llamatelemetry"
 edit_uri = "edit/main/docs/"
 copyright = """
 Copyright &copy; 2026 llamatelemetry
